# Socrates

./: .gitignore  MEMORY.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  start-app.sh  tsconfig.base.json
.github/workflows/: release.yml  runtime-release.yml  shell-tooling.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: .env.example  Dockerfile  README.md  alembic.ini  requirements.txt
context-files/: APP_FLOW.md  DB_STRUCTURE.md  FRONTEND_BACKEND_CONTRACT.md  PROVIDER_USAGE.md  REPO_RULES.md  REPO_STRCUTURE.md  V2_FLOW_ARCHITECTURE.md
evals/: codeact-smoke-report.json  test-workspace-codeact-prompts.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
repo_docs/: APP_FLOW.md  CONTRACTS.md  CORE_IDEA.md  DB_STRUCTURE.md  FRONTEND_BACKEND_CONTRACT.md  PROVIDER_USAGE.md  REPO_NAVIGATION.md  REPO_RULES.md  REPO_RULEs.md  REPO_STRCUTURE.md
scripts/: benchmark-retrieval.mjs  context-compression-eval.mjs  context-harness-grinder.mjs  cost-efficiency-eval.mjs  curate-skill-learning-dataset.mjs  export-memory-harness-dataset.mjs  export-skill-learning-dataset.mjs  install-socrates.ps1  install-socrates.sh  replay-chat-cost-e2e.mjs  run-codeact-eval.mjs  run-memory-harness-eval.ts  run-skill-learning-eval.ts  trace-retrieve-e2e.ts
(+579 files in other folders)
