[package]
name = "socrates-desktop"
version = "0.1.2"
description = "Socrates desktop shell"
authors = ["Socrates"]
edition = "2021"

[lib]
name = "socrates_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-updater = "2.9.0"
